# gcm

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
src/: main.rs  package.rs  registry.rs
src/cmd/: install.rs  list.rs  mod.rs  update.rs
