[package]
name = "gcm"
version = "0.1.0"
edition = "2021"
description = "GreyCat Manager - update, install, discover packages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
home = { version = "0.5.9" }
semver = { version = "1.0.22" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115"}
termcolor = "1.4.1"
ureq = { version = "2.9.6", features = ["json"] }
zip = { version = "0.6.6" }

[profile.release]
strip = true
lto = true
panic = "abort"
