[package]
name = "gcm"
version = "0.1.2"
edition = "2024"
authors = ["Maxime Tricoire <maxime.tricoire@datathings.com>"]
description = "GreyCat Manager - update, install, discover packages"

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.8"
home = "0.5.9"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
termcolor = "1.4.1"
ureq = { version = "2.9.6", features = ["json"] }
zip = "=0.6.6"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
panic = "abort"
